--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+     <meta charset="UTF-8">
+     <title> Pensamento Computacional 1° Series NEM </title>
