--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <html lang="pt-br">
 <head>
      <meta charset="UTF-8">
-     <title> Pensamento Computacional 1° Series NEM </title>
+     <title> Barbearia Alura 1° Series NEM </title>
